--- a/cvpikachu.html
+++ b/cvpikachu.html
@@ -38,7 +38,7 @@
                 rutrum, nisl sit amet semper sodales, tortor ante aliquam erat, vel suscipit ligula nunc eget ex. Nunc
                 accumsan volutpat vestibulum. Donec bibendum bibendum justo non convallis.
             </p>
-            <h2>EXPERIENCIAS</h2>
+            <h2>EXPERIÊNCIAS</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vestibulum mi in est placerat consequat. Sed
                 scelerisque sapien vitae porttitor volutpat. Ut vitae sodales eros, vitae mattis nibh. Suspendisse
                 rutrum, nisl sit amet semper sodales, tortor ante aliquam erat, vel suscipit ligula nunc eget ex. Nunc
