--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     <h1>Welcome to my playground fullstack</h1>
 
     <a href="cvpikachu.html">CV Pikachu</a>
-
+    <a href="tabelaveiculos">Tabela de Veículos</a>
+    
     <script src="" async defer></script>
 </body>
 
