--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
     <h1>Welcome to my playground fullstack</h1>
 
     <a href="cvpikachu.html">CV Pikachu</a>
-    <a href="tabelaveiculos">Tabela de Veículos</a>
-    
+    <a href="tabelaveiculos.html">Tabela de Veículos</a>
+    <a href="localizacao.html">Contatoe localizacao</a>
+
     <script src="" async defer></script>
 </body>
 
