--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <a href="cvpikachu.html">CV Pikachu</a>
     <a href="tabelaveiculos.html">Tabela de Veículos</a>
-    <a href="localizacao.html">Contato e localizacao</a>
+    <a href="localizacao.html">Contato e localização</a>
 
     <script src="" async defer></script>
 </body>
