--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Playground</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -21,9 +21,12 @@
 
     <h1>Welcome to my playground fullstack</h1>
 
-    <a href="cvpikachu.html">CV Pikachu</a>
-    <a href="tabelaveiculos.html">Tabela de Veículos</a>
-    <a href="localizacao.html">Contato e localização</a>
+    <nav class="menu-site">
+        <a href="index.html" class="ativo">Página inicial</a>
+        <a href="cvpikachu.html">CV Pikachu</a>
+        <a href="tabelaveiculos.html">Tabela de Veículos</a>
+        <a href="localizacao.html">Contato e localização</a>
+    </nav>
 
     <script src="" async defer></script>
 </body>
