--- a/localizacao.html
+++ b/localizacao.html
@@ -29,16 +29,16 @@
             width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"></iframe>
         <p>Entre em contato conosco pelo e-mail: contato@auladehtml.com.br ou pelo formulário abaixo:</p>
-        <form action="https://webhook.site/b07c97c0-28be-4edf-a040-f2172a0bf9f9">
-            <input class="formulario-contato" type="text" placeholder="Informe seu nome">
-            <input class="formulario-contato" type="email" placeholder="Informe seu e-mail">
-            <textarea name="mail" id="mail" cols="30" rows="10" placeholder="Digite a mensagem"></textarea>
+        <form action="https://webhook.site/b07c97c0-28be-4edf-a040-f2172a0bf9f9" id="example-form">
+            <input class="formulario-contato" placeholder="Informe seu nome" type="text" name="nome" id="nome">
+            <input class="formulario-contato" placeholder="Informe seu e-mail" type="text" name="mail" id="mail">
+            <textarea name="text" id="text" cols="30" rows="10" placeholder="Digite a mensagem"></textarea>
             <br>
-            <button>Enviar</button>
+            <input type="submit" value="Enviar">
         </form>
     </div>
 
-    <script src="" async defer></script>
+    <script src="script.js" async defer></script>
 </body>
 
 </html>
