--- a/localizacao.html
+++ b/localizacao.html
@@ -9,6 +9,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Localização</title>
+    <link rel="icon" type="image/x-icon" href="img/mail.png">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
