--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Playground</title>
+    <link rel="icon" type="image/x-icon" href="img/faviconIndex.svg">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
@@ -19,14 +20,57 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-    <h1>Welcome to my playground fullstack</h1>
 
+    <div class="row">
+        <div class="column" onclick="location.href='cvpikachu.html';" style="cursor: pointer;">
+            <div class="card-index">
+                <img class="imagem-pessoa" src="img/pikachu-work.jpg" alt="Pikachu trabalhador">
+                <div class="card-index-dados">
+                    <h4 class="titulo-card">CV-Pikachu</h4>
+                    <p>Pikachu está procurando um memprego. Você pode ajudar? <a href="cvpikachu.html">Leia mais.</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="column" onclick="location.href='tabelaveiculos.html';" style="cursor: pointer;">
+            <div class="card-index">
+                <img class="imagem-pessoa" src="img/rentcar.jpg" alt="Veículos da empresa">
+                <div class="card-index-dados">
+                    <h4 class="titulo-card">Tabela de Veículos</h4>
+                    <p>Vai viajar pela firma? Escolha seu carro e pé na tabua. <a href="tabelaveiculos.html">Leia
+                            mais.</a></p>
+                </div>
+            </div>
+        </div>
+        <div class="column" onclick="location.href='localizacao.html';" style="cursor: pointer;">
+            <div class="card-index">
+                <img class="imagem-pessoa" src="img/map.jpeg" alt="Contato e Localização">
+                <div class="card-index-dados">
+                    <h4 class="titulo-card">Contato e Localização</h4>
+                    <p>Quer entrar em contato ou nos encontrar pelo mundo? <a href="localizacao.html">Leia mais.</a></p>
+                </div>
+            </div>
+        </div>
+        <div class="column" onclick="location.href='#';" style="cursor: pointer;">
+            <div class="card-index">
+                <img class="imagem-pessoa" src="img/question.jpg" alt="Aguardando">
+                <div class="card-index-dados">
+                    <h4 class="titulo-card">Próximo trabalho?</h4>
+                    <p>Ainda não sabemos o próximo trabalho, mas será complicado!</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!--
     <nav class="menu-site">
         <a href="index.html" class="ativo">Página inicial</a>
         <a href="cvpikachu.html">CV Pikachu</a>
         <a href="tabelaveiculos.html">Tabela de Veículos</a>
         <a href="localizacao.html">Contato e localização</a>
     </nav>
+    -->
+
 
     <script src="" async defer></script>
 </body>
