--- a/cvpikachu.html
+++ b/cvpikachu.html
@@ -9,7 +9,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>CV Pikachu</title>
-    <link rel="icon" type="image/x-icon" href="https://user-images.githubusercontent.com/63087888/87461299-8582b900-c60e-11ea-82ff-7a27a51859d0.png">
+    <link rel="icon" type="image/x-icon"
+        href="https://user-images.githubusercontent.com/63087888/87461299-8582b900-c60e-11ea-82ff-7a27a51859d0.png">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
@@ -20,7 +21,7 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
     <div id="container">
-        
+
         <div class="abertura">
             <a href="index.html">Voltar</a>
             <h1>Pikachu #0025</h1>
