--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <img class="imagem-pessoa" src="img/question.jpg" alt="Aguardando">
                 <div class="card-index-dados">
                     <h4 class="titulo-card">Próximo trabalho?</h4>
-                    <p>Ainda não sabemos o próximo trabalho, mas será complicado!</p>
+                    <p>Ainda não sabemos sobre o próximo trabalho, mas será complicado!</p>
                 </div>
             </div>
         </div>
