--- a/index.html
+++ b/index.html
@@ -20,8 +20,15 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
+    <div class="descricao">
+        <img class="img-descricao" src="img/ef.jpg" alt="Eduardo Franzen">
+        <h1 class="descricao-titulo">Eduardo Franzen, 1988</h1>
+        <p class="descricao-texto">Gremista, viciado em queijo, analista de sistemas, gerente de TI e de projetos no <a href="https://www.jornaldocomercio.com/"> Jornal do Comércio</a>. Quase me formei em Design Digital (UFPEL), já passei pelos cursos de direito (Unisinos) e engenharia industrial (UFPEL). Tomo umas cervejas nas horas vagas.</p>
+    </div>
+    <hr>
 
-    <div class="row">
+    <div id="centralizar">
+
         <div class="column" onclick="location.href='cvpikachu.html';" style="cursor: pointer;">
             <div class="card-index">
                 <img class="imagem-pessoa" src="img/pikachu-work.jpg" alt="Pikachu trabalhador">
@@ -61,15 +68,6 @@
             </div>
         </div>
     </div>
-
-    <!--
-    <nav class="menu-site">
-        <a href="index.html" class="ativo">Página inicial</a>
-        <a href="cvpikachu.html">CV Pikachu</a>
-        <a href="tabelaveiculos.html">Tabela de Veículos</a>
-        <a href="localizacao.html">Contato e localização</a>
-    </nav>
-    -->
 
 
     <script src="" async defer></script>
