--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="descricao">
         <img class="img-descricao" src="img/ef.jpg" alt="Eduardo Franzen">
         <h1 class="descricao-titulo">Eduardo Franzen, 1988</h1>
-        <p class="descricao-texto">Gremista, viciado em queijo, analista de sistemas, gerente de TI e de projetos no <a href="https://www.jornaldocomercio.com/"> Jornal do Comércio</a>. Quase me formei em Design Digital (UFPEL), já passei pelos cursos de direito (Unisinos) e engenharia industrial (UFPEL). Tomo umas cervejas nas horas vagas.</p>
+        <p class="descricao-texto">Gremista, viciado em queijo, analista de sistemas, gerente de TI e de projetos no <a href="https://www.jornaldocomercio.com/"> Jornal do Comércio</a>. Quase me formei em Design Digital (UFPEL), já passei pelos cursos de direito (Unisinos) e engenharia industrial (UFPEL). Tomo umas cervejas nas horas vagas. Natural de Porto Alegre, Rio Grande do Sul, Brasil.</p>
     </div>
     <hr>
 
