--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="icon" type="image/x-icon" href="img/faviconIndex.svg">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://kit.fontawesome.com/e621d43c00.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -23,7 +24,16 @@
     <div class="descricao">
         <img class="img-descricao" src="img/ef.jpg" alt="Eduardo Franzen">
         <h1 class="descricao-titulo">Eduardo Franzen, 1988</h1>
-        <p class="descricao-texto">Gremista, viciado em queijo, analista de sistemas, gerente de TI e de projetos no <a href="https://www.jornaldocomercio.com/"> Jornal do Comércio</a>. Quase me formei em Design Digital (UFPEL), já passei pelos cursos de direito (Unisinos) e engenharia industrial (UFPEL). Tomo umas cervejas nas horas vagas. Natural de Porto Alegre, Rio Grande do Sul, Brasil.</p>
+        <p class="descricao-texto">Gremista, viciado em queijo, analista de sistemas, gerente de TI e de projetos no <a
+                href="https://www.jornaldocomercio.com/"> Jornal do Comércio</a>. Quase me formei em Design Digital
+            (UFPEL), já passei pelos cursos de direito (Unisinos) e engenharia industrial (UFPEL). Tomo umas cervejas
+            nas horas vagas. Natural de Porto Alegre, Rio Grande do Sul, Brasil.</p>
+        <div class="redes-bio">
+            <i onclick="window.open('https://www.linkedin.com/in/dudaccf/', '_blank')" style="cursor: pointer;" class="fa-brands fa-linkedin"></i>
+            <i onclick="window.open('https://www.instagram.com/franzen.eduardo/', '_blank')" style="cursor: pointer;" class="fa-brands fa-square-instagram"></i>
+            <i onclick="window.open('https://www.facebook.com/dudaccf', '_blank')" style="cursor: pointer;" class="fa-brands fa-square-facebook"></i>
+            <i onclick="window.open('https://github.com/franzeneduardo', '_blank')" style="cursor: pointer;" class="fa-brands fa-square-github"></i>
+        </div>
     </div>
     <hr>
 
