--- a/localizacao.html
+++ b/localizacao.html
@@ -43,7 +43,7 @@
         </p>
     </div>
 
-    <script src="script.js" async defer></script>
+    <script src="localizacao.js" async defer></script>
 </body>
 
 </html>
