--- a/index.html
+++ b/index.html
@@ -29,10 +29,14 @@
             (UFPEL), já passei pelos cursos de direito (Unisinos) e engenharia industrial (UFPEL). Tomo umas cervejas
             nas horas vagas. Natural de Porto Alegre, Rio Grande do Sul, Brasil.</p>
         <div class="redes-bio">
-            <i onclick="window.open('https://www.linkedin.com/in/dudaccf/', '_blank')" style="cursor: pointer;" class="fa-brands fa-linkedin"></i>
-            <i onclick="window.open('https://www.instagram.com/franzen.eduardo/', '_blank')" style="cursor: pointer;" class="fa-brands fa-square-instagram"></i>
-            <i onclick="window.open('https://www.facebook.com/dudaccf', '_blank')" style="cursor: pointer;" class="fa-brands fa-square-facebook"></i>
-            <i onclick="window.open('https://github.com/franzeneduardo', '_blank')" style="cursor: pointer;" class="fa-brands fa-square-github"></i>
+            <i onclick="window.open('https://www.linkedin.com/in/dudaccf/', '_blank')" style="cursor: pointer;"
+                class="fa-brands fa-linkedin"></i>
+            <i onclick="window.open('https://www.instagram.com/franzen.eduardo/', '_blank')" style="cursor: pointer;"
+                class="fa-brands fa-square-instagram"></i>
+            <i onclick="window.open('https://www.facebook.com/dudaccf', '_blank')" style="cursor: pointer;"
+                class="fa-brands fa-square-facebook"></i>
+            <i onclick="window.open('https://github.com/franzeneduardo', '_blank')" style="cursor: pointer;"
+                class="fa-brands fa-square-github"></i>
         </div>
     </div>
     <hr>
@@ -65,6 +69,15 @@
                 <div class="card-index-dados">
                     <h4 class="titulo-card">Contato e Localização</h4>
                     <p>Quer entrar em contato ou nos encontrar pelo mundo? <a href="localizacao.html">Leia mais.</a></p>
+                </div>
+            </div>
+        </div>
+        <div class="column" onclick="location.href='editora.html';" style="cursor: pointer;">
+            <div class="card-index">
+                <img class="imagem-pessoa" src="img/book.jpeg" alt="Contato e Localização">
+                <div class="card-index-dados">
+                    <h4 class="titulo-card">Sistema de Editora</h4>
+                    <p>Cadastrar livros e descobrir a lista de livros cadastrados nunca foi tão fácil. <a href="localizacao.html">Leia mais.</a></p>
                 </div>
             </div>
         </div>
