--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
         <div class="column" onclick="location.href='localizacao.html';" style="cursor: pointer;">
             <div class="card-index">
-                <img class="imagem-pessoa" src="img/map.jpeg" alt="Contato e Localização">
+                <img class="imagem-pessoa" src="img/map.jpeg" alt="Mapa">
                 <div class="card-index-dados">
                     <h4 class="titulo-card">Contato e Localização</h4>
                     <p>Quer entrar em contato ou nos encontrar pelo mundo? <a href="localizacao.html">Leia mais.</a></p>
@@ -74,10 +74,19 @@
         </div>
         <div class="column" onclick="location.href='editora.html';" style="cursor: pointer;">
             <div class="card-index">
-                <img class="imagem-pessoa" src="img/book.jpeg" alt="Contato e Localização">
+                <img class="imagem-pessoa" src="img/book.jpeg" alt="Livros">
                 <div class="card-index-dados">
                     <h4 class="titulo-card">Sistema de Editora</h4>
                     <p>Cadastrar livros e descobrir a lista de livros cadastrados nunca foi tão fácil. <a href="localizacao.html">Leia mais.</a></p>
+                </div>
+            </div>
+        </div>
+        <div class="column" onclick="location.href='produtos.html';" style="cursor: pointer;">
+            <div class="card-index">
+                <img class="imagem-pessoa" src="img/feira.jpeg" alt="Feira">
+                <div class="card-index-dados">
+                    <h4 class="titulo-card">Cadastro de Produtos</h4>
+                    <p>Cadastrar produtos via API com valores, quantidades e o seu tipo. <a href="produtos.html">Leia mais.</a></p>
                 </div>
             </div>
         </div>
