--- a/produtos.html
+++ b/produtos.html
@@ -20,7 +20,7 @@
         <![endif]-->
 
     <div class="principal">
-
+        <a href="index.html">Voltar</a>
         <header>
             <img  src="img/morango.jpeg" alt="Morango">
             <h1 class="produtos__titulo">Cadastro de produtos:</h1>
