--- a/index.html
+++ b/index.html
@@ -90,6 +90,15 @@
                 </div>
             </div>
         </div>
+        <div class="column" onclick="location.href='rickmorty.html';" style="cursor: pointer;">
+            <div class="card-index">
+                <img class="imagem-pessoa" src="img/rickandmorty.jpg" alt="Feira">
+                <div class="card-index-dados">
+                    <h4 class="titulo-card">Rick And Morty API</h4>
+                    <p>Loaliza status de personagens via API <a href="rickmorty.html">Leia mais.</a></p>
+                </div>
+            </div>
+        </div>
         <div class="column" onclick="location.href='#';" style="cursor: pointer;">
             <div class="card-index">
                 <img class="imagem-pessoa" src="img/question.jpg" alt="Aguardando">
