--- a/rickmorty.html
+++ b/rickmorty.html
@@ -7,11 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylerm.css">
     <script src="scriptrm.js"></script>
-    <title>Document</title>
+    <title>Rick And Morty API</title>
 </head>
 
 <body>
     <div class="container">
+        <a href="index.html">Voltar</a>
         <header>
             <img class="imgRM" src="img/rickandmorty.jpg" alt="Rick And Morty">
             <h1 class="titulo__header">Rick and Morty</h1>
