--- a/rickmorty.html
+++ b/rickmorty.html
@@ -36,6 +36,15 @@
                 <div class="imgPersonagemBox">
                     <img id="imgPersonagem" class="imgPersonagem" src="" alt="">
                 </div>
+                <div class="descricao" id="descricao">
+                    <h4 class="tituloDadosPersonagem">Especie:</h4>
+                    <p class="dadosPersonagem" id="especiePersonagem"></p>
+                    <h4 class="tituloDadosPersonagem">Tipo:</h4>
+                    <p class="dadosPersonagem" id="tipoPersonagem"></p>
+                    <h4 class="tituloDadosPersonagem">Genero:</h4>
+                    <p class="dadosPersonagem" id="generoPersonagem"></p>
+                </div>
+
 
             </div>
         </main>
