--- a/rickmorty.html
+++ b/rickmorty.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="img/faviconrm.png">
     <link rel="stylesheet" href="stylerm.css">
     <script src="scriptrm.js"></script>
     <title>Rick And Morty API</title>
